# code_puzzles

./: .gitignore  10104_euclid_problem.cpp  112A.cpp  1234D.cpp  1234D_set.cpp  1266A.cpp  1266_A.cpp  12775_gift_dilemma.cpp  1293B.cpp  133_clone_graph.py  1463A.cpp  1491A.cpp  1515B.cpp  1542_C.cpp  1560B.py  158A.cpp  1594C.cpp  1612C.cpp  1779A.cpp  1790E.cpp  1795C.cpp  1817A.cpp  1826B.cpp  1850G.cpp  1856C.cpp  1857.cpp  1873_G.cpp  1891C.cpp  1898B.cpp  1898B_2.cpp  1907E.cpp  1922.cpp  1971.py  1995E1.cpp  1A.cpp  207_A.cpp  25A.cpp  277A.cpp  282A.cpp  339D.cpp  (+61 more)
1000/: 118A.cpp  122A.cpp  124A.cpp  1256A.cpp  131A.cpp  1326A.cpp  1353C.cpp  1359A.cpp  1374C.cpp  1395A.cpp  1430C.cpp  1690D.cpp  1859B.cpp  1979B.cpp  1985C.cpp  1987B.cpp  1987B.py  1987B_1.cpp  230A.cpp  339B.cpp  43A.cpp  450A.cpp  476A.cpp  479A.cpp  500A.cpp  584A.cpp  58A.cpp  688B.cpp  69A.cpp  766A.cpp  768B.cpp  a.out
1100/: 1788B.cpp  1788B_standings.cpp  2074C.cpp  a.out
1200/: 1987C.cpp  a.out
200/: a.out  abc043B.cpp  abc057B.cpp  abc060B.cpp  abc064C.cpp  abc065B.cpp  abc073C.cpp  abc075B.cpp  abc082B.cpp  abc088C.cpp  abc096C.cpp  abc098B.cpp  abc107B.cpp  abc126C.cpp  abc139D.cpp  abc154D.cpp  abc157C.cpp  abc159D.cpp  abc416C.cpp  agc006A.cpp  agc013A.cpp  agc013A_bf.cpp  agc015A.cpp  agc029A.cpp  agc040A.cpp  agc066B.cpp  agc066B_2.cpp  arc073A.cpp  arc075A.cpp  arc082A.cpp  arc086A.cpp  arc089A.cpp  arc091A.cpp  diverta2019B.cpp  generate_testcases.py  new  old  (+3 more)
rust/hello-rust/: Cargo.toml
rust/hello-rust/src/: 2007B.rs  abc368.rs  abc370.rs  abc373A.rs  abc373B.rs
(+601 files in other folders)
